--- a/wp-content/themes/mystile/css/layout.css
+++ b/wp-content/themes/mystile/css/layout.css
@@ -40,6 +40,9 @@ INDEX
     box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.1);
     -webkit-box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.1);
   }
+  body {
+    padding: 0 3.631em;
+  }
   table {
     font-size: 1em !important;
   }
@@ -981,7 +984,7 @@ INDEX
     line-height: 52px;
     color: #fff;
     font-size: 16px;
-    font-weight: 300;
+    font-weight: bold;
     text-align: center;
     background: #21b0d1 !important;
     margin: 0.618em 0 0 0;
@@ -1003,6 +1006,18 @@ INDEX
       margin-bottom: 5%;
       width: 100%;
     }
+    .footer-wrap {
+      background:url(../includes/images/prettyPhoto/default/bt-bg.png);
+      margin: 0 -3.631em;
+      padding: 0 3.631em;
+    }
+    .address {
+      width: 100%;
+      margin: 0 0 0 3.33%;
+    }
+    .support-number{
+        display: none;
+    }
   }
   @media only screen and (max-width: 1300px){
     .shell {
@@ -1010,7 +1025,27 @@ INDEX
       width: 90%;
     }
   }
-  #ctas article p {
+    @media only screen and (min-width:768px) {
+        .shell {
+            width:980px;
+            margin:0 auto;
+        }
+        .no-sidebar {
+            max-width: 980px;
+        }
+        .address {
+            width: 30%;
+            margin: 0 0 0 3.33%;
+            float: left;
+        }
+        .support-number{
+            float: right;
+            margin-top: 0.45em;
+            margin-right: 2.55em;
+        }
+    }
+
+#ctas article p {
     color: #222222 !important;
   }
   #ctas article p {
@@ -1018,11 +1053,7 @@ INDEX
     padding: 25px 30px;
     text-align: center;
   }
-  .address {
-    width: 30%;
-    margin: 0 0 0 3.33%;
-    float: left;
-  }
+
   .addr_text {
     width: 90%;
   }
@@ -1043,6 +1074,8 @@ INDEX
   }
   .pageHeader {
     background: #f6f5f0 url(../includes/images/prettyPhoto/default/header.png) repeat;
-    border-top: solid 8px #233654;
+    border-top: solid 8px #28145c;
     height: 8.625em;
+    margin: 0 -3.631em;
+    padding: 0 3.631em;
   }
