layout checkout page

--- a/wp-content/themes/mystile/css/layout.css
+++ b/wp-content/themes/mystile/css/layout.css
@@ -602,6 +602,7 @@ INDEX
   }
   #main {
     width: 69.2%;
+    margin-top: 5em;
   }
   #sidebar {
     margin-top: 0;
@@ -1031,6 +1032,9 @@ INDEX
     }
     #header #navigation ul {
         margin-bottom: 4em;
+    }
+    #main{
+        margin-top: 5em;
     }
   }
   @media only screen and (max-width: 1300px){
