update color menu

--- a/wp-content/themes/mystile/css/layout.css
+++ b/wp-content/themes/mystile/css/layout.css
@@ -190,7 +190,7 @@ INDEX
   }
   #header #navigation ul.nav > li a {
     border: 1px solid #fcfcfc;
-    background: #d4d1e0;
+    background: #28145c;
     font-weight: bold;
     position: relative;
     -webkit-border-radius: 0.236em;
@@ -204,13 +204,16 @@ INDEX
     background: #fff;
     color: #28145c;
   }
+  #header #navigation ul.nav > li a{
+    color: #fff;
+  }
   #header #navigation ul.nav > li:hover a {
     border-color: #28145c;
     background: #fff;
   }
   #header #navigation ul.nav > li.current-menu-item > a,
   #header #navigation ul.nav > li.current_page_item > a {
-    color: #28145c;
+    color: #fff;
   }
   #header #navigation ul.nav > li.parent a {
     -webkit-border-bottom-left-radius: 0;
