--- a/wp-content/themes/mystile/style.css
+++ b/wp-content/themes/mystile/style.css
@@ -598,6 +598,7 @@ ul.nav li a {
   float: left;
   margin-bottom: 1.618em;
   margin-left: 7.518em;
+  margin-right: 2em;
 }
 #header .site-title,
 #header .site-description {
