--- a/wp-content/themes/mystile/css/layout.css
+++ b/wp-content/themes/mystile/css/layout.css
@@ -104,13 +104,13 @@ INDEX
     display: block;
   }
   #top ul.nav {
-    font-size: .857em;
+    font-size: .957em;
     /* LEVEL 2 */
     /* LEVEL 3 */
   }
   #top ul.nav > li a {
     padding: 1.387em 1em;
-    color: #9f9693;
+    color: #253894;
   }
   #top ul.nav > li a:hover {
     background: #f7f7f7;
@@ -164,7 +164,7 @@ INDEX
     text-align: right;
   }
   #top .wc-nav li.cart a {
-    padding-top: 1.387em;
+    padding-top: 0.787em;
     padding-left: 1em;
   }
   #top .wc-nav li.cart a .contents {
@@ -177,6 +177,7 @@ INDEX
     background-clip: padding-box;
     margin-left: 1em;
     display: inline;
+    color: #253894;
   }
   /* 3. MAIN NAVIGATION DROPDOWN MENUS (Add main navigation presentational styles here) */
   #header #navigation {
@@ -190,7 +191,7 @@ INDEX
   }
   #header #navigation ul.nav > li a {
     border: 1px solid #fcfcfc;
-    background: #483671;
+    background: #253894;
     font-weight: bold;
     position: relative;
     -webkit-border-radius: 0.236em;
@@ -202,18 +203,18 @@ INDEX
   #header #navigation ul.nav > li a:hover {
     border-color: #e8e4e3;
     background: #fff;
-    color: #28145c;
+    color: #253894;
   }
   #header #navigation ul.nav > li a{
     color: #fff;
   }
   #header #navigation ul.nav > li:hover a {
-    border-color: #28145c;
+    border-color: #253894;
     background: #fff;
   }
   #header #navigation ul.nav > li.current-menu-item > a,
   #header #navigation ul.nav > li.current_page_item > a {
-    color: #faea23;
+    color: #ffe983;
   }
   #header #navigation ul.nav > li.parent a {
     -webkit-border-bottom-left-radius: 0;
@@ -576,7 +577,7 @@ INDEX
   }
   #header {
     padding-bottom: 1.618em;
-    padding-top: 3.631em;
+    padding-top: 1.631em;
   }
   #header:after {
     content: "\0020";
@@ -605,8 +606,11 @@ INDEX
     width: 100%;
   }
   #main {
-    width: 69.2%;
+    width: 100%;
     margin-top: 5em;
+  }
+  .main-shop-1{
+    width: 69.2%!important;
   }
   #sidebar {
     margin-top: 0;
@@ -1025,7 +1029,7 @@ INDEX
     .support-number{
         display: none;
     }
-    .row{
+    .row,.note-order{
         display: none;
     }
     .new-sale,.col-rp_39-7,.col-rp_31-6{
@@ -1046,6 +1050,10 @@ INDEX
     }
     .ajax_add_to_cart{
        margin: 0 0.827em!important;
+    }
+    #header #logo{
+        margin-left: 4.518em;
+        margin-right: 5em;
     }
   }
   @media only screen and (max-width: 1300px){
@@ -1074,15 +1082,19 @@ INDEX
         .support-number{
             margin-top: 0.45em;
             margin-right: 2.55em;
-            color:#28145c;
-            font-size: 1.418em;
-            /*-webkit-animation: my 700ms infinite;*/
-            /*-moz-animation: my 700ms infinite;*/
-            /*-o-animation: my 700ms infinite;*/
-            /*animation: my 700ms infinite;*/
+            color: #253894;
+            font-size: 1.718em;
+            margin:0 0 -0.318em;
+
         }
         .hotline{
             list-style: none;
+        }
+        .address-hotline{
+            font-size: 15px;
+        }
+        #header #logo{
+            width: 262px;
         }
         .text_head_31 {
             color: #232323;
@@ -1090,6 +1102,14 @@ INDEX
             font-size: 1.583em;
             text-align: center;
             margin-bottom: 0.750em;
+        }
+        .note-order{
+            float: right;
+            margin-top: -2.16em;
+            -webkit-animation: my 1000ms infinite;
+            -moz-animation: my 1000ms infinite;
+            -o-animation: my 1000ms infinite;
+            animation: my 1000ms infinite;
         }
         .text-center {
             text-align: center;
@@ -1138,6 +1158,9 @@ INDEX
         .product-recent  .ajax_add_to_cart{
             margin: 0 2.327em!important;
         }
+        #content{
+            max-width: 980px;
+        }
     }
 
 #ctas article p {
@@ -1161,7 +1184,7 @@ INDEX
   }
   .list_info > li {
     width: 100%;
-    color: #929191;
+    color: #ffe983;
     font-size: 0.98em;
     line-height: 1.692em;
     display: block;
@@ -1207,12 +1230,13 @@ INDEX
     }
     .captionLC {
         position: absolute;
-        top: 8em;
+        top: 4em;
         left: 0px;
         background: url(../includes/images/prettyPhoto/default/bg-trans.png) repeat;
         padding: 25px 25px 35px 25px;
         width: 30%;
         font-size: 17px;
+        font-family: Arial, Helvetica, sans-serif;
     }
     .captionLC_list {
         display: block;
@@ -1227,7 +1251,7 @@ INDEX
         display: block;
         font-size: 0.775em;
         color: #fff;
-        background: #f67429;
+        background: red;
         width: 110px;
         height: 12px;
         vertical-align: middle;
@@ -1324,31 +1348,31 @@ INDEX
         font-weight: bold;
         margin-bottom: 5px;
     }
-    /*@-webkit-keyframes my {*/
-        /*0% { color: #28145c; }*/
-        /*50% { color: #fff;  }*/
-        /*100% { color: #28145c;  }*/
-    /*}*/
-    /*@-moz-keyframes my {*/
-        /*0% { color: #28145c;  }*/
-        /*50% { color: #fff;  }*/
-        /*100% { color: #28145c;  }*/
-    /*}*/
-    /*@-o-keyframes my {*/
-        /*0% { color: #28145c; }*/
-        /*50% { color: #fff; }*/
-        /*100% { color: #28145c;  }*/
-    /*}*/
-    /*@keyframes my {*/
-        /*0% { color: #28145c;  }*/
-        /*50% { color: #fff;  }*/
-        /*100% { color: #28145c;  }*/
-    /*}*/
+    @-webkit-keyframes my {
+        0% { color: #28145c; }
+        50% { color: #ffe983;  }
+        100% { color: #28145c;  }
+    }
+    @-moz-keyframes my {
+        0% { color: #28145c;  }
+        50% { color: #ffe983;  }
+        100% { color: #28145c;  }
+    }
+    @-o-keyframes my {
+        0% { color: #28145c; }
+        50% { color: #ffe983; }
+        100% { color: #28145c;  }
+    }
+    @keyframes my {
+        0% { color: #28145c;  }
+        50% { color: #ffe983;  }
+        100% { color: #28145c;  }
+    }
     .single-product .product{
         margin-top: 5em;
     }
     .woocommerce-Price-amount,.product_title{
-        color: #28145c;
+        color: #253894;
     }
     .col-rp_31-6 {
         width: 26.632%;
@@ -1433,5 +1457,8 @@ INDEX
     }
     .products h3{
         font-size: 16px;
+    }
+    .hotline{
+        list-style: none;
     }
 
