--- a/wp-content/themes/mystile/css/layout.css
+++ b/wp-content/themes/mystile/css/layout.css
@@ -869,6 +869,8 @@ INDEX
   table.cart td.actions .button {
     margin-left: .618em;
     float: none !important;
+    background: #253894;
+    border: none;
   }
   .cart-collaterals:after {
     content: "\0020";
@@ -1243,6 +1245,7 @@ INDEX
         width: 30%;
         font-size: 17px;
         font-family: Arial, Helvetica, sans-serif;
+        z-index: 99999;
     }
     .captionLC_list {
         display: block;
@@ -1258,13 +1261,16 @@ INDEX
         font-size: 0.775em;
         color: #fff;
         background: red;
-        width: 110px;
-        height: 12px;
+        width: 107px;
+        height: 16px;
         vertical-align: middle;
         text-transform: uppercase;
         float: left;
         padding: 14px 20px;
         background: -moz-linear-gradient(top, #f67429 0%, #f67429);
+    }
+    .btnFoodOrder:hover{
+        color: #fff;
     }
     .captionLC_list > li {
         margin-bottom: 16px;
