--- a/wp-content/themes/mystile/css/layout.css
+++ b/wp-content/themes/mystile/css/layout.css
@@ -1260,7 +1260,7 @@ INDEX
         display: block;
         font-size: 0.775em;
         color: #fff;
-        background: red;
+        background: #253894;
         width: 107px;
         height: 16px;
         vertical-align: middle;
