--- a/wp-content/themes/mystile/style.css
+++ b/wp-content/themes/mystile/style.css
@@ -935,7 +935,7 @@ ul.nav li a {
   background: #fff;
 }
 .woo-pagination .page-numbers.current {
-  background: #ff4800;
+  background: #253894;
   color: #fff;
   padding: .382em .857em;
 }
