--- a/wp-content/themes/mystile/style.css
+++ b/wp-content/themes/mystile/style.css
@@ -461,7 +461,7 @@ table th,
 table td {
   border-bottom: 1px solid #e8e4e3;
   padding: 1em;
-  vertical-align: top;
+  vertical-align: middle;
   text-align: left;
 }
 table th {
@@ -2341,7 +2341,6 @@ table.cart .product-quantity .minus {
   display: inline-block;
 }
 table.cart img {
-  width: 3.631em;
   height: auto;
 }
 ul#shipping_method {
